# swaml

./: .gitignore  .pre-commit-config.yaml  .swiftformat  Package.swift  README.md
Sources/BamlFFIC/: baml_ffi_c.c
Sources/BamlFFIC/include/: baml_ffi_c.h
Sources/SWAML/: SwamlClient.swift
Sources/SWAML/Client/: ChatMessage.swift  LLMClient.swift  LLMClientConfig.swift  LLMProvider.swift  LLMResponse.swift
Sources/SWAML/FFI/: BamlFFI.swift  BamlRuntimeFFI.swift  LLMClientConfig.swift  TypeBuilderFFI.swift
Sources/SWAML/Parser/: JSONExtractor.swift  JsonishParser.swift  OutputParser.swift  (+1 more)
Sources/SwamlMacros/: Macros.swift
Sources/SwamlMacrosPlugin/: AliasMacro.swift  BamlDynamicMacro.swift  BamlTypeMacro.swift  DescriptionMacro.swift  Plugin.swift  SwamlDynamicMacro.swift  SwamlTypeMacro.swift
Tests/SWAMLTests/: BamlTypedTests.swift  BamlValueTests.swift  ChatMessageTests.swift  EndToEndTests.swift  IntegrationTestConfig.swift  IntegrationTests.swift  JSONExtractorTests.swift  JSONSchemaTests.swift  JsonishParserTests.swift  OpenRouterIntegrationTests.swift  OutputFormatInjectionTests.swift  OutputParserTests.swift  RetryPolicyTests.swift  RuntimeContextTests.swift  SchemaPromptRendererTests.swift  SwamlClientTests.swift  SwamlTypedTests.swift  SwamlValueTests.swift  TypeBuilderStrictTests.swift  TypeBuilderTests.swift  TypeCoercionTests.swift
Tests/SwamlMacrosTests/: BamlTypeMacroTests.swift  SwamlTypeMacroTests.swift
docs/: README.md  advanced-usage.md  api-reference.md  core-concepts.md  getting-started.md  providers.md  type-builder.md
generator/: Cargo.toml  README.md
generator/src/: baml_parser.rs  functions.rs  generated_types.rs  lib.rs  package.rs  swift_types.rs  type.rs  utils.rs
generator/src/ir_to_swift/: classes.rs  enums.rs  functions.rs  mod.rs  type_aliases.rs  unions.rs
generator/templates/: client.swift.j2  globals.swift.j2  stream_types.swift.j2  type_builder.swift.j2  types.swift.j2  union.swift.j2
generator/tests/: integration_tests.rs
generator/tests/fixtures/: content_types.baml  ecommerce.baml  sentiment.baml  user_profile.baml
scripts/: build-linux.sh  build-xcframework.sh
(+21 files in other folders)
