[package]
name = "baml-generator-swift"
version = "0.1.0"
edition = "2021"
description = "Swift code generator for BAML"
license = "MIT"
repository = "https://github.com/boundaryml/baml"

[dependencies]
# BAML internal dependencies (paths are relative to BAML repo structure)
# When integrating with BAML, update these paths:
# internal-baml-core = { path = "../../baml-lib/baml-core" }
# baml-types = { path = "../../baml-lib/baml-types" }
# internal-baml-codegen = { path = "../codegen" }

# Template engine
askama = { version = "0.12", features = ["with-serde-json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ordered maps for deterministic output
indexmap = { version = "2.0", features = ["serde"] }

# String utilities
heck = "0.5"
either = "1.9"

[dev-dependencies]
pretty_assertions = "1.4"
