[package]
name = "baml-generator-swift"
version = "0.1.0"
edition = "2021"
description = "Swift code generator for BAML"
license = "MIT"
repository = "https://github.com/boundaryml/baml"

[dependencies]
# BAML dependencies via git (optional feature for direct IR integration)
baml-types = { git = "https://github.com/BoundaryML/baml", package = "baml-types", optional = true }
internal-baml-core = { git = "https://github.com/BoundaryML/baml", package = "internal-baml-core", optional = true }

# CLI
clap = { version = "4.0", features = ["derive"], optional = true }

# Template engine
askama = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ordered maps for deterministic output
indexmap = { version = "2.0", features = ["serde"] }

# String utilities
heck = "0.5"
either = "1.9"
regex = "1.10"

# Logging
log = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = []
baml-ir = ["baml-types", "internal-baml-core"]
cli = ["baml-ir", "clap"]

[[bin]]
name = "baml-swift"
required-features = ["cli"]
